# software-optimization-course

./: CMakeLists.txt  README.md  opt_reads_mapping.cpp  reads.txt  reads_mapping.ipynb  res.txt  unopt_reads_mapping.cpp
cpp/: opt_reads_mapping.cpp  unopt_reads_mapping.cpp
python/: reads_mapping.ipynb
