cmake_minimum_required(VERSION 3.10)

# set the project name
project(unopt_reads_mapping)

# add the executable
add_executable(unopt_reads_mapping unopt_reads_mapping.cpp)

# set the project name
project(opt_reads_mapping)

# add the executable
add_executable(opt_reads_mapping opt_reads_mapping.cpp)